hphp/test/zend/bad/ext-spl/dllist_011.php
<?php
$dll = new SplDoublyLinkedList();
$dll->rewind();
$dll->prev();
var_dump($dll->current());
?>
===DONE===